Improve Folder listing in nepomuksearch kioslave

Set the UDS_TARGET_URL for directories.

Patch by Simeon Bird (sbird) <bladud@gmail.com>

REVIEW: 105158
BUG: 293111